Reset button styles to fix appearance on iOS hopefully (testing).

--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,30 @@ a:hover {
   color: darkslategray;
 }
 
+button {
+  appearance: none;
+  -webkit-appearance: none;
+  background: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  color: inherit;
+  text-align: center;
+  display: inline-block;
+  /* display: flex; */
+  /* justify-content: center; */
+  align-items: center;
+  border-radius: 0;
+}
+
+button {
+  border: 1px solid black;
+  background-color: white;
+}
+
 .italic {
   font-style: italic;
 }
